public abstract class Constants
{
    // ANIM
    public const string ANIM_RUN = "run";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_WIN = "win";
    public const string ANIM_HIT = "hit";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DIE = "die";
    // Spider Boss
    public const string ANIM_ROLL = "roll";
    public const string ANIM_JUMP = "jump";
    public const string ANIM_FALL = "fall";
    
    public const string TAG_PLAYER = "Player";

    // STRING
    public const string LEVEL = "Level";

    
}
